finalizing rigid-body UI - fixing arrow design
